--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">OrderPractice</string>
+    <string name="app_name">Marketim</string>
+    <string name="main_title">MARKETİM</string>
     <string name="rememberme">Beni Hatırla</string>
     <string name="login">Giriş</string>
     <string name="hint_username">Kullanıcı Adı</string>
